--- a/grid-minimo/index.html
+++ b/grid-minimo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modelo de Caja Sin Dolor</title>
+  <title>GameList</title>
 
   <!-- CSS externo -->
   <link rel="stylesheet" href="styles/main.css" />
@@ -18,13 +18,13 @@
         <p class="tagline">Tu colección personal de videojuegos</p>
       </div>
 
-      <!-- NAV (para que tenga sentido el ejercicio de Flexbox en navegación) -->
-      <nav class="nav">
+      <nav class="nav" aria-label="Navegación principal">
         <ul class="nav-list">
           <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#newsletter">Newsletter</a></li>
           <li><a href="#top-picks">Top Picks</a></li>
-          <li><a href="#añadir">Añadir</a></li>
+          <li><a href="#cards">Colección</a></li>
+          <li><a href="#newsletter">Newsletter</a></li>
+          <li><a href="#añadir">Sugerir</a></li>
         </ul>
       </nav>
     </div>
@@ -42,12 +42,12 @@
             Crea tu lista personal de videojuegos, califica cada título y
             descubre nuevos juegos recomendados por la comunidad.
           </p>
-          <a href="#newsletter" class="btn btn-primary">Explorar colección</a>
+          <a href="#cards" class="btn btn-primary">Explorar colección</a>
         </div>
       </div>
     </section>
 
-    <!-- Top Picks (nuevo para el ejercicio de flex-wrap) -->
+    <!-- Top Picks (Flexbox) -->
     <section id="top-picks" class="top-picks">
       <div class="container">
         <h2 class="section-title">Top Picks</h2>
@@ -75,12 +75,43 @@
       </div>
     </section>
 
-    <!-- Contenido existente -->
-    <div class="container">
-      <h1>Modelo de Caja Sin Dolor</h1>
+    <!-- Cards (Grid) -->
+    <section id="cards" class="collection">
+      <div class="container">
+        <h2 class="section-title">Colección</h2>
+        <p class="section-description">Algunas tarjetas de ejemplo en formato grid</p>
 
-      <!-- Newsletter -->
-      <section class="newsletter" id="newsletter">
+        <div class="cards">
+          <article class="pick-card">
+            <h3 class="pick-title">Celeste</h3>
+            <p class="pick-description">Plataformas desafiante</p>
+            <div class="pick-rating">★★★★★</div>
+          </article>
+
+          <article class="pick-card">
+            <h3 class="pick-title">Stardew Valley</h3>
+            <p class="pick-description">Relax y gestión</p>
+            <div class="pick-rating">★★★★☆</div>
+          </article>
+
+          <article class="pick-card">
+            <h3 class="pick-title">Hades</h3>
+            <p class="pick-description">Roguelike brutal</p>
+            <div class="pick-rating">★★★★★</div>
+          </article>
+
+          <article class="pick-card">
+            <h3 class="pick-title">Inside</h3>
+            <p class="pick-description">Narrativa oscura</p>
+            <div class="pick-rating">★★★★☆</div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section class="newsletter" id="newsletter">
+      <div class="container">
         <h2 class="section-title">Mantente al día</h2>
         <p class="section-description">Recibe recomendaciones de juegos y novedades</p>
 
@@ -108,10 +139,12 @@
 
           <button type="submit" class="btn btn-primary">Suscribirse</button>
         </form>
-      </section>
+      </div>
+    </section>
 
-      <!-- Sugerir juego -->
-      <section id="añadir" class="suggest-game">
+    <!-- Sugerir juego -->
+    <section id="añadir" class="suggest-game">
+      <div class="container">
         <h2 class="section-title">Sugerir un juego</h2>
         <p class="section-description">¿Tienes un juego favorito que quieres compartir?</p>
 
@@ -171,7 +204,7 @@
                 class="form-input"
                 placeholder="2023"
                 min="1970"
-                max="2025"
+                max="2026"
                 required
               />
             </div>
@@ -201,8 +234,9 @@
 
           <button type="submit" class="btn btn-primary">Enviar sugerencia</button>
         </form>
-      </section>
-    </div>
+      </div>
+    </section>
+
   </main>
 
   <!-- Footer -->
